--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_chat.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_chat.xml
@@ -5,47 +5,65 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.ChatActivity">
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/topBanner"
-        android:layout_width="match_parent"
-        android:clickable="true"
-        android:layout_height="50dp"
-        android:background="@color/dark_blue_transparent"
-        app:layout_constraintStart_toStartOf="parent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textSize="40dp"
-            android:id="@+id/tvFragmentTitle"
-            android:text="Chat"
-            android:textColor="@color/white"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
     <ImageButton
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/addNewMessage"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:clickable="true"
+        android:elevation="50dp"
         android:focusable="true"
-        app:layout_constraintTop_toBottomOf="@id/topBanner"
-        android:src="@drawable/button_chat">
+        android:backgroundTint="@color/unfollow"
+        android:src="@drawable/ic_baseline_add_message_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
-    </ImageButton>
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    <ImageView
+        android:id="@+id/btnActivityShowFollowersAndFollowingBackToUser"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:clickable="true"
+        android:src="@drawable/ic_baseline_arrow_back"
+        android:textAllCaps="false"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+    <TextView
+        android:id="@+id/tvActivityShowFollowersOrFollowingShow"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="268dp"
+        android:text="Poruke"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeContainer"
-        app:layout_constraintTop_toBottomOf="@id/addNewMessage">
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvActivityShowFollowersOrFollowingShow"
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout_editor_absoluteX="-27dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvMain"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" >
+            app:layout_constraintTop_toTopOf="parent">
 
         </androidx.recyclerview.widget.RecyclerView>
+
+
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
