--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_home_page.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_home_page.xml
@@ -127,11 +127,12 @@
     </FrameLayout>
 
     <ImageView
-        android:id="@+id/imageView12"
+        android:id="@+id/ivFragmentHomePageChat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
+        android:clickable="true"
         android:src="@drawable/ic_round_chat_24"
         app:layout_constraintEnd_toStartOf="@+id/cvFragmentHomePageProfile"
         app:layout_constraintTop_toTopOf="parent" />
