--- a/Client/BrzoDoLokacije/app/src/main/res/layout/post_item_home_page.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/post_item_home_page.xml
@@ -28,7 +28,7 @@
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
         android:elevation="3dp"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="@+id/imageView9"
         app:layout_constraintEnd_toEndOf="@id/imageView9"
         app:layout_constraintStart_toStartOf="@id/imageView9"
