--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_forgotten_password_verify.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_forgotten_password_verify.xml
@@ -6,8 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".Activities.ActivityForgottenPassword">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
-        android:layout_width="398dp"
+        android:layout_width="350dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -102,5 +105,6 @@
             android:layout_height="30dp" />
 
     </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
