--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_user_following.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_user_following.xml
@@ -1,18 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.FragmentUserFollowing">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/textView16"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/FragmentBrowseCardViewSearch"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:elevation="10dp"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <AutoCompleteTextView
+            android:id="@+id/FragmentFollowingSearchBar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:backgroundTint="@color/white"
+            android:hint="  Pretraga"
+            android:inputType="textPersonName"
+            android:paddingLeft="15dp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/FragmentFollowingSearchBButton"
+            android:layout_width="49dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:background="#00FFFFFF"
+            app:backgroundTint="#00FFFFFF"
+            app:cornerRadius="16dp"
+            app:icon="@drawable/ic_baseline_search_24"
+            app:iconTint="#333D70" />
+
+    </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvFragmentUserFollowing"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/FragmentBrowseCardViewSearch" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
